welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:12: error: not found: value nbrebiscuit
  if (nbrebiscuit>2){
      ^Poucet:16: error: not found: value nbrebiscuit
  if (nbrebiscuit<3){
      ^